# MERCOSUL

./: .gitignore  Home.py  README.md  pyproject.toml
.streamlit/: config.toml
pages/: Stacked_Area_Graph.py  Stacked_Bar_Chart.py  Waffle_Chart.py  Word_Cloud.py
