[tool.poetry]
name = "mercosul"
version = "0.1.0"
description = ""
authors = ["Lucas Lago <lukemartinslagonit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.37.1"
pandas = "^2.2.2"
wordcloud = "^1.9.3"
matplotlib = "^3.9.1.post1"
pywaffle = "^1.1.1"
altair = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
